--- a/SND/neutrino_ml/ML_snd_demo.ipynb
+++ b/SND/neutrino_ml/ML_snd_demo.ipynb
@@ -2417,28 +2417,30 @@
    "metadata": {},
    "source": [
     "### Training and testing\n",
-    "* a\n",
+    "* Model performance seems more or less saturated, yet some small improvements can be achieved with additional training.\n",
+    "* For further significant changes in the performance modifications in the input, output, training strategy (including loss function) are necessary.\n",
+    "* Balancing the dataset would also influence the performance, as performance per class now correlates with the class population.\n",
     "\n",
     "### Improving loss function\n",
-    "* a\n",
+    "* Currently network is trained to equally distinguish everything. However, if we are, for instance, interested in specific class purity (V_e), than the corresponding errors should be penalised more heavily in the loss function.\n",
     "\n",
     "### Event-based analysis\n",
-    "* a \n",
+    "* This notebook presents comparison of aggregated event visualisations for correct predictions, because there we see a distinctive feature that could be used for separation. This is further confirmed in the event widths analysis.\n",
+    "* Other type of comparisons can be easily performed. I did not manage to find a clear human-readable feature visible in those distributions (i.e. visualising different types of events misclassified by the algorithm). This does not mean the features are not there, of course. More comparisons can lead to further discoveries.\n",
     "\n",
     "### Broadening the study\n",
-    "* a\n",
+    "* Additional inputs or outputs can help forcing the network to learn more physically relevant features. Such as:\n",
+    "    * Adding event energy as the output that network needs to predict.\n",
+    "    * Adding charge of the hits in the input, so that arrays have not only 0-1 in the pixels.\n",
+    "    * Trying to predict the axis of the shower (direction).\n",
     "\n",
     "### Relevance maps\n",
-    "* a"
+    "* More work is needed to obtain physical features.\n",
+    "    * Cross-check the features used to identify wall number (to see that it's intuitively correct).\n",
+    "    * Average not all events, but events with the same (close) center, so that tails of different showers do not cancel each other.\n",
+    "    * Compare what is relevant for different classes.\n",
+    "* Maybe check more methods for the relevance map production, some not gradient-based."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b0a8dc0-40dd-40bc-9607-17b879a120d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
